@@ -3704,9 +3704,9 @@ class WebKitStyleTest(CppStyleTestBase):
         self.assert_lint('void qt_drt_is_awesome(int var1, int var2);', '')
 
         # NPAPI functions that start with NPN_, NPP_ or NP_ are allowed.
-        self.assert_lint('void NPN_Status(NPP, const char*)')
-        self.assert_lint('NPError NPP_SetWindow(NPP instance, NPWindow *window)')
-        self.assert_lint('NPObject* NP_Allocate(NPP, NPClass*)')
+        self.assert_lint('void NPN_Status(NPP, const char*)', '')
+        self.assert_lint('NPError NPP_SetWindow(NPP instance, NPWindow *window)', '')
+        self.assert_lint('NPObject* NP_Allocate(NPP, NPClass*)', '')
 
         # const_iterator is allowed as well.
         self.assert_lint('typedef VectorType::const_iterator const_iterator;', '')
